--- a/spa/src/app/files/hca-file-summary/hca-file-summary.component.html
+++ b/spa/src/app/files/hca-file-summary/hca-file-summary.component.html
@@ -2,14 +2,14 @@
     <div class="layout-column layout-gt-xs-row">
         <div class="layout-padding flex summary-count file">
             <div>
-                <h3 class="mat-headline">{{summary.fileCount | localeString}}</h3>
-                <span class="md-body-1">Files</span>
+                <h3 class="mat-headline">{{summary.donorCount | localeString}}</h3>
+                <span class="md-body-1">Cells</span>
             </div>
         </div>
         <div class="layout-padding flex summary-count donor">
             <div>
-                <h3 class="mat-headline">{{summary.donorCount | localeString}}</h3>
-                <span class="md-body-1">Donors</span>
+                <h3 class="mat-headline">{{summary.fileCount | localeString}}</h3>
+                <span class="md-body-1">Files</span>
             </div>
         </div>
         <div class="layout-padding flex summary-count size">
