--- a/spa/src/app/app.component.html
+++ b/spa/src/app/app.component.html
@@ -2,5 +2,6 @@
     <cgl-toolbar></cgl-toolbar>
 </header>
 <cc-snapper>
+    <hca-toolbar></hca-toolbar>
     <router-outlet></router-outlet>
 </cc-snapper>
