--- a/spa/src/app/files/hca-file-summary/hca-file-summary.component.html
+++ b/spa/src/app/files/hca-file-summary/hca-file-summary.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="layout-padding flex summary-count body-part">
             <div>
-                <h3 class="mat-headline">{{summary.primarySiteCount | localeString}}</h3>
+                <h3 class="mat-headline">{{summary.bodyPartsCount | localeString}}</h3>
                 <span class="md-body-1">Body Parts</span>
             </div>
         </div>
