fix summary header

--- a/spa/src/app/files/hca-file-summary/hca-file-summary.component.html
+++ b/spa/src/app/files/hca-file-summary/hca-file-summary.component.html
@@ -8,13 +8,13 @@
         </div>
         <div class="layout-padding flex summary-count body-part">
             <div>
-                <h3 class="mat-headline">{{summary.bodyPartsCount | localeString}}</h3>
+                <h3 class="mat-headline">{{summary.bodyPartsCounts | localeString}}</h3>
                 <span class="md-body-1">Body Parts</span>
             </div>
         </div>
         <div class="layout-padding flex summary-count donor">
             <div>
-                <h3 class="mat-headline">{{summary.donorCount | localeString}}</h3>
+                <h3 class="mat-headline">{{summary.sampleCount | localeString}}</h3>
                 <span class="md-body-1">Samples</span>
             </div>
         </div>
