Udpated data table mappings and CSS.

--- a/spa/src/app/files/files.component.html
+++ b/spa/src/app/files/files.component.html
@@ -9,5 +9,5 @@
             (click)="onDownloadManifest()">
         <mat-icon>file_download</mat-icon>
     </button>
-    <bw-table></bw-table>
+    <hca-table></hca-table>
 </div>
