Export to firecloud (#1)
Add Export to FireCloud button

Also remove items from menu that don't apply to Commons instance.

--- a/spa/src/app/files/files.component.html
+++ b/spa/src/app/files/files.component.html
@@ -9,5 +9,12 @@
             (click)="onDownloadManifest()">
         <mat-icon>file_download</mat-icon>
     </button>
+    <button class="cgl-fab cgl-fab2"
+            mat-fab
+            matTooltip="Export to FireCloud"
+            [matTooltipPosition]="'before'"
+            (click)="onExportToFireCloud()">
+        <mat-icon>cloud_upload</mat-icon>
+    </button>
     <bw-table></bw-table>
 </div>
