Add FireCloud button
DataBiosphere/boardwalk#3

--- a/spa/src/app/files/files.component.html
+++ b/spa/src/app/files/files.component.html
@@ -18,7 +18,7 @@
             matTooltip="Export to FireCloud"
             [matTooltipPosition]="'before'"
             (click)="onExportToFireCloud()">
-        <mat-icon>cloud_upload</mat-icon>
+        <mat-icon svgIcon="firecloud"></mat-icon>
     </button>
     <bw-table></bw-table>
 </div>
