HCA summary and table changes

--- a/spa/src/app/files/hca-file-summary/hca-file-summary.component.html
+++ b/spa/src/app/files/hca-file-summary/hca-file-summary.component.html
@@ -6,16 +6,16 @@
                 <span class="md-body-1">Projects</span>
             </div>
         </div>
-        <div class="layout-padding flex summary-count body-part">
+        <div class="layout-padding flex summary-count organ-count">
             <div>
-                <h3 class="mat-headline">{{summary.bodyPartsCounts | localeString}}</h3>
-                <span class="md-body-1">Body Parts</span>
+                <h3 class="mat-headline">{{summary.organCounts | localeString}}</h3>
+                <span class="md-body-1">Organs</span>
             </div>
         </div>
-        <div class="layout-padding flex summary-count donor">
+        <div class="layout-padding flex summary-count biomaterial-count">
             <div>
-                <h3 class="mat-headline">{{summary.sampleCount | localeString}}</h3>
-                <span class="md-body-1">Samples</span>
+                <h3 class="mat-headline">{{summary.biomaterialCount | localeString}}</h3>
+                <span class="md-body-1">Biomaterials</span>
             </div>
         </div>
         <div class="layout-padding flex summary-count file">
