--- a/spa/src/app/files/hca-table/hca-table.component.html
+++ b/spa/src/app/files/hca-table/hca-table.component.html
@@ -10,45 +10,41 @@
     </div>
     <mat-table *ngIf="pagination$ | async; let pagination" #table [dataSource]="tableElementDataSource" matSort
                (matSortChange)="sortTable(pagination, $event)">
-        <ng-container matColumnDef="sampleId">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Sample ID</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.sampleId}}</mat-cell>
+        <ng-container matColumnDef="biomaterial">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Biomaterial</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.biomaterial}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="sampleSpecies">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Sample Species</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.sampleSpecies}}</mat-cell>
+        <ng-container matColumnDef="organ">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Organ</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.organ}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="sampleNcbiTaxonIds">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Sample NCBI Taxon IDs</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.sampleNcbiTaxonIds}}</mat-cell>
+        <ng-container matColumnDef="organPart">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Organ Part</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.organPart}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="assayId">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Assay ID</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.assayId}}</mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="rnaLibraryConstruction">
+        <ng-container matColumnDef="libraryConstruction">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Library Construction</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.rnaLibraryConstruction}}</mat-cell>
+            <mat-cell *matCellDef="let element"> {{element.libraryConstruction}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="bundleType">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Bundle Type</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.bundleType}}</mat-cell>
+        <ng-container matColumnDef="species">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Species</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.species}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="fileName">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> File Name</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.fileName}}</mat-cell>
+        <ng-container matColumnDef="age">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Age</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.age}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="fileUuid">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> File Uuid</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.fileUuid}}</mat-cell>
+        <ng-container matColumnDef="ageUnit">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Age Unit</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.ageUnit}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="fileVersion">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> File Version</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.fileVersion}}</mat-cell>
+        <ng-container matColumnDef="sex">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Sex</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.sex}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="fileSize">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> File Size</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.fileSize | fileSize}}</mat-cell>
+        <ng-container matColumnDef="diseased">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Diseased</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.diseased}}</mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
