--- a/spa/src/app/files/file-export/file-export.component.css
+++ b/spa/src/app/files/file-export/file-export.component.css
@@ -3,3 +3,10 @@
     display: flex;
     font-size: large;
 }
+mat-radio-group {
+    margin-bottom: 10px;
+}
+
+mat-radio-button {
+    margin-right: 10px;
+}
