--- a/spa/src/app/files/table/table.component.html
+++ b/spa/src/app/files/table/table.component.html
@@ -42,9 +42,9 @@
             <mat-header-cell *matHeaderCellDef mat-sort-header> Filename</mat-header-cell>
             <mat-cell *matCellDef="let element"> {{element.title}}</mat-cell>
         </ng-container>
-        <ng-container matColumnDef="file_id">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> File Id</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.file_id}}</mat-cell>
+        <ng-container matColumnDef="dos_uri">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> DOS URI</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{element.dos_uri}}</mat-cell>
         </ng-container>
         <ng-container matColumnDef="fileSize">
             <mat-header-cell *matHeaderCellDef mat-sort-header> File Size</mat-header-cell>
