--- a/spa/src/app/files/files.component.html
+++ b/spa/src/app/files/files.component.html
@@ -1,9 +1,9 @@
 <div class="layout-column layout-padding">
     <bw-file-summary [summary]="selectFileSummary$ | async"></bw-file-summary>
-    <bw-file-filter
+    <bw-file-filter-wrapper
             [selectedFacets]="selectedFileFacets$ | async"
             [fileFacets]="fileFacets$ | async">
-    </bw-file-filter>
+    </bw-file-filter-wrapper>
     <bw-file-facets [fileFacets]="fileFacets$ | async">
     </bw-file-facets>
     <button class="cgl-fab"
