--- a/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
+++ b/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
@@ -12,7 +12,7 @@
                 <a href="{{rootUrl}}/boardwalk">Data Browser</a>
             </cc-toolbar-nav-item>
             <cc-toolbar-nav-item *ngIf="(authorizedUser$ | async) as user">
-                <a href="{{rootUrl}}/logout" class="logout">Mim Hastie<span>Logout</span></a>
+                <a href="{{rootUrl}}/logout" class="logout">{{user.name}}<span>Logout</span></a>
             </cc-toolbar-nav-item>
             <cc-toolbar-nav-item *ngIf="!(authorizedUser$ | async)">
                 <a href="{{rootUrl}}/bw-login">Login</a>
