Disabled autocomplete on search type facet.

--- a/spa/src/app/cc-typeahead/cc-typeahead.component.html
+++ b/spa/src/app/cc-typeahead/cc-typeahead.component.html
@@ -1,4 +1,4 @@
 <mat-form-field>
   <mat-placeholder>{{placeholder}}</mat-placeholder>
-  <input matInput type="text" [formControl]="searchTerm">
+  <input matInput type="text" [formControl]="searchTerm" autocomplete="off">
 </mat-form-field>
