Added register component. Updated login component. Updated 401/403 to internal routes.

--- a/spa/src/app/auth/register/register.component.html
+++ b/spa/src/app/auth/register/register.component.html
@@ -1,8 +1,8 @@
 <div class="layout-column layout-padding">
     <h1 class="md-display-1">
-        Login
+        Register
     </h1>
     <p class="mat-body-1">
-        <a href="/login">Login using Google</a>
+        Please contact <a href="mailto:casloan@ucsc.edu">casloan@ucsc.edu</a>.
     </p>
 </div>
