text updates to login and register

--- a/spa/src/app/auth/login/login.component.html
+++ b/spa/src/app/auth/login/login.component.html
@@ -3,6 +3,6 @@
         Login
     </h1>
     <p class="mat-body-1">
-        <a href="/login">Login using Google</a>
+      Please login to access the Data Commons Platform. <br> <a href="/login">Login with Google</a>
     </p>
 </div>
