address pr comments

--- a/spa/src/app/auth/register/register.component.html
+++ b/spa/src/app/auth/register/register.component.html
@@ -3,6 +3,6 @@
         Register
     </h1>
     <p class="mat-body-1">
-        To register for data access, please contact <a href="mailto:casloan@ucsc.edu">casloan@ucsc.edu</a>.
+        To register for data access, please contact <a href="mailto:todo@ucsc.edu">todo@ucsc.edu</a>.
     </p>
 </div>
