All or Nothing Auth (#91)
* wip

* Upgraded Http to HttpClient. Added redirect to login on 403. Minor linting.

* Fixed observable catch/throw imports.

* Removed visual flash of file component content before auth has resolved.

* Updated authenticated user header UI.

* Added interceptor for 403.

* Removed hard-coded test user name.

* Disabled autocomplete on search type facet.

* Added register component. Updated login component. Updated 401/403 to internal routes.

* text updates to login and register

* address pr comments

* fix typo in error interceptor

--- a/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
+++ b/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
@@ -9,13 +9,13 @@
                 <a href="{{rootUrl}}/index.html">Home</a>
             </cc-toolbar-nav-item>
             <cc-toolbar-nav-item class="active">
-                <a href="{{rootUrl}}/boardwalk.html">Data Browser</a>
+                <a href="{{rootUrl}}/boardwalk">Data Browser</a>
             </cc-toolbar-nav-item>
             <cc-toolbar-nav-item *ngIf="(authorizedUser$ | async) as user">
-                <a href="{{rootUrl}}/logout"><img src="{{user.avatar}}" alt="{{user.name}}" height="20" width="20">Logout</a>
+                <a href="{{rootUrl}}/logout" class="logout">{{user.name}}<span>Logout</span></a>
             </cc-toolbar-nav-item>
             <cc-toolbar-nav-item *ngIf="!(authorizedUser$ | async)">
-                <a href="{{rootUrl}}/login">Login</a>
+                <a href="{{rootUrl}}/authenticate">Login</a>
             </cc-toolbar-nav-item>
         </cc-toolbar-nav>
     </mat-toolbar-row>
