Fix login link on header

--- a/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
+++ b/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
@@ -15,7 +15,7 @@
                 <a href="{{rootUrl}}/logout" class="logout">{{user.name}}<span>Logout</span></a>
             </cc-toolbar-nav-item>
             <cc-toolbar-nav-item *ngIf="!(authorizedUser$ | async)">
-                <a href="{{rootUrl}}/authenticate">Login</a>
+                <a href="{{rootUrl}}/login">Login</a>
             </cc-toolbar-nav-item>
         </cc-toolbar-nav>
     </mat-toolbar-row>
