Replaced UCSC logo with Commons.

--- a/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
+++ b/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
@@ -1,7 +1,6 @@
 <mat-toolbar>
     <mat-toolbar-row>
-        <img src="/assets/images/logos/ucsc-gi/logo-ucsc-gi@1x.png"
-             srcset="/assets/images/logos/ucsc-gi/logo-ucsc-gi@2x.png 2x, /assets/images/logos/ucsc-gi/logo-ucsc-gi@3x.png 3x">
+        <img src="/assets/images/logos/commons/stage-commons-logo.png">
         <button md-mini-fab menu-open cc-hamburger><mat-icon>menu</mat-icon></button>
         <button md-mini-fab menu-close><mat-icon>close</mat-icon></button>
         <cc-toolbar-nav>
