--- a/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
+++ b/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
@@ -1,20 +1,20 @@
 <mat-toolbar>
     <mat-toolbar-row>
-        <img src="/assets/images/logos/commons/stage-commons-logo.png">
+        <img src="assets/images/logos/commons/stage-commons-logo.png">
         <button md-mini-fab menu-open cc-hamburger><mat-icon>menu</mat-icon></button>
         <button md-mini-fab menu-close><mat-icon>close</mat-icon></button>
         <cc-toolbar-nav>
             <cc-toolbar-nav-item>
-                <a href="{{rootUrl}}/index.html">Home</a>
+                <a href="{{rootUrl}}/">Home</a>
             </cc-toolbar-nav-item>
             <cc-toolbar-nav-item class="active">
-                <a href="{{rootUrl}}/boardwalk">Data Browser</a>
+                <a href="{{rootUrl}}/explore">Data Browser</a>
             </cc-toolbar-nav-item>
             <cc-toolbar-nav-item *ngIf="(authorizedUser$ | async) as user">
-                <a href="{{rootUrl}}/logout" class="logout">{{user.name}}<span>Logout</span></a>
+                <a href="{{authURL}}/logout" class="logout">{{user.name}}<span>Logout</span></a>
             </cc-toolbar-nav-item>
             <cc-toolbar-nav-item *ngIf="!(authorizedUser$ | async)">
-                <a href="{{rootUrl}}/login">Login</a>
+                <a href="{{authURL}}/login">Login</a>
             </cc-toolbar-nav-item>
         </cc-toolbar-nav>
     </mat-toolbar-row>
