fix home page for test

--- a/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
+++ b/spa/src/app/shared/cgl-toolbar/cgl-toolbar.component.html
@@ -5,7 +5,7 @@
         <button md-mini-fab menu-close><mat-icon>close</mat-icon></button>
         <cc-toolbar-nav>
             <cc-toolbar-nav-item>
-                <a href="{{rootUrl}}/">Home and Stuff</a>
+                <a href="{{rootUrl}}/">Home</a>
             </cc-toolbar-nav-item>
             <cc-toolbar-nav-item class="active">
                 <a href="{{rootUrl}}/explore">Data Browser</a>
